--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,46 +7,93 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <!-- Logo -->
+            <a href="#home" class="logo">
+                <img src="img/getimg_ai_img-4QG31FUP4QZLBZAgxVFmP.jpeg" alt="Logo Vendas de Carros Esportivos">
+            </a>
+            <h1>Vendas de Carros Esportivos</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Início</a></li>
+                    <li><a href="#carros">Carros</a></li>
+                    <li><a href="#compra">Comprar</a></li> <!-- Link para a seção de Compra -->
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <!-- Carrossel de Banners -->
-    <div class="carrossel-container">
-        <div class="carrossel" id="carrossel">
-            <div class="carro-banner">
-                <img src="carro1.jpg" alt="Carro 1">
-                <div class="info-carro">
-                    <h2>Ferrari 488</h2>
-                    <p>R$ 2.500.000</p>
-                    <button class="comprar" onclick="adicionarAoCarrinho('Ferrari 488', 2500000)">Comprar</button>
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h2>Carros Esportivos para Todos os Gostos</h2>
+            <p>Descubra a sua próxima máquina com a gente!</p>
+        </div>
+    </section>
+
+    <section id="carros" class="carros-section">
+        <h2>Modelos Disponíveis</h2>
+        <div class="carousel-container">
+            <div class="carousel" id="carousel">
+                <div class="carousel-item">
+                    <img src="img/transferir.jpeg" alt="Carro 1">
+                    <a href="#compra" class="btn-comprar">Comprar</a> <!-- Link de compra -->
+                </div>
+                <div class="carousel-item">
+                    <img src="img/transferir (1).jpeg" alt="Carro 2">
+                    <a href="#compra" class="btn-comprar">Comprar</a> <!-- Link de compra -->
+                </div>
+                <div class="carousel-item">
+                    <img src="img/images (2).jpeg" alt="Carro 3">
+                    <a href="#compra" class="btn-comprar">Comprar</a> <!-- Link de compra -->
                 </div>
             </div>
-            <div class="carro-banner">
-                <img src="carro2.jpg" alt="Carro 2">
-                <div class="info-carro">
-                    <h2>Lamborghini Huracán</h2>
-                    <p>R$ 3.000.000</p>
-                    <button class="comprar" onclick="adicionarAoCarrinho('Lamborghini Huracán', 3000000)">Comprar</button>
-                </div>
-            </div>
-            <div class="carro-banner">
-                <img src="c:\Users\Aluno\Downloads\download.jpeg" alt="Carro 3">
-                <div class="info-carro">
-                    <h2>McLaren 720S</h2>
-                    <p>R$ 2.200.000</p>
-                    <button class="comprar" onclick="adicionarAoCarrinho('McLaren 720S', 2200000)">Comprar</button>
-                </div>
+            <div class="carousel-controls">
+                <button class="prev" onclick="moveToPreviousImage()">❮</button>
+                <button class="next" onclick="moveToNextImage()">❯</button>
             </div>
         </div>
-        <button class="prev" onclick="moverCarrossel(-1)">&#10094;</button>
-        <button class="next" onclick="moverCarrossel(1)">&#10095;</button>
-    </div>
+    </section>
 
-    <!-- Carrinho de Compras -->
-    <div class="carrinho">
-        <h3>Carrinho de Compras</h3>
-        <ul id="carrinho-list"></ul>
-        <p>Total: R$ <span id="total">0</span></p>
-        <button onclick="finalizarCompra()">Finalizar Compra</button>
-    </div>
+    <!-- Seção de Compra -->
+    <section id="compra" class="compra-section">
+        <div class="compra-container">
+            <h2>Área de Compra</h2>
+            <p>Escolha o seu carro esportivo e finalize a compra abaixo!</p>
+            <form action="#" method="POST">
+                <div class="form-group">
+                    <label for="modelo">Modelo do Carro:</label>
+                    <select id="modelo" name="modelo">
+                        <option value="carro1">Carro 1</option>
+                        <option value="carro2">Carro 2</option>
+                        <option value="carro3">Carro 3</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+
+                <button type="submit">Finalizar Compra</button>
+            </form>
+        </div>
+    </section>
+
+    <section id="contato" class="contato-section">
+        <h2>Entre em Contato</h2>
+        <p>Fale conosco para mais informações sobre os modelos!</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Vendas de Carros Esportivos. Todos os direitos reservados.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
